@@ -183,6 +183,7 @@ Global
 		{3DFF51A9-8581-4393-96E2-F927E0DBF64A}.Release|x86.ActiveCfg = Release|x86
 		{3DFF51A9-8581-4393-96E2-F927E0DBF64A}.Release|x86.Build.0 = Release|x86
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Debug|x64.ActiveCfg = Debug|x64
+		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Debug|x64.Build.0 = Debug|x64
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Debug|x86.ActiveCfg = Debug|x86
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Debug|x86.Build.0 = Debug|x86
 		{05C0E1FD-697C-47E2-AC1B-3A42601FB121}.Profile|x64.ActiveCfg = Release|x86
