@@ -83,7 +83,7 @@ namespace Direct3D9
 		return IntPtr( data );
 	}
 
-	AnimationOutput AnimationSet::GetTransformation( double periodicPosition, int animation )
+	AnimationOutput^ AnimationSet::GetTransformation( double periodicPosition, int animation )
 	{
 		Vector3 scale;
 		Vector3 translation;
@@ -93,13 +93,13 @@ namespace Direct3D9
 			reinterpret_cast<D3DXQUATERNION*>( &rotation ), reinterpret_cast<D3DXVECTOR3*>( &translation ) );
 		
 		if( RECORD_D3D9( hr ).IsFailure )
-			return AnimationOutput();
+			return nullptr;
 
-		AnimationOutput output;
-		output.Flags = AnimationOutputFlags::Rotation | AnimationOutputFlags::Scale | AnimationOutputFlags::Translation;
-		output.Scaling = scale;
-		output.Translation = translation;
-		output.Rotation = rotation;
+		AnimationOutput^ output = gcnew AnimationOutput();
+		output->Flags = AnimationOutputFlags::Rotation | AnimationOutputFlags::Scale | AnimationOutputFlags::Translation;
+		output->Scaling = scale;
+		output->Translation = translation;
+		output->Rotation = rotation;
 
 		return output;
 	}
